Update the surefire plugin